--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -4,7 +4,6 @@
 .project-content{
     display: flex;
     margin-bottom: 2px;
-    background: #fff;
     min-height: 350px;
     @include max(992px){
         grid-template-columns: 100%;
@@ -32,10 +31,12 @@
         }
     }
     .project-img{
+        position: relative;
         mix-blend-mode: multiply;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        z-index: 1;
     }
 }
 
@@ -76,6 +77,7 @@
             .project-col{
                 &:last-child{
                     order: 1;
+                    background: var(--bg-project);
                     @include max(992px){
                         order: 2;
                     }
@@ -85,6 +87,13 @@
                     @include max(992px){
                         order: 1;
                     }
+                }
+            }
+        }
+        &:nth-child(odd){
+            .project-col{
+                &:last-child{
+                    background: var(--bg-project);
                 }
             }
         }
